--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_claims
 spring.datasource.username=root
-spring.datasource.password=MMKK123@
+spring.datasource.password=Piyush@l1
 spring.jpa.show-sql=true 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
